fixes for UI