@@ -15,4 +15,4 @@ FROM eclipse-temurin:26-jre-alpine
 WORKDIR /app
 COPY --from=build /app/note-keeper-service/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar", "--spring.config.location=file:/app/etc/application.yaml"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "--sun-misc-unsafe-memory-access=allow", "-Dio.netty.tryReflectionSetAccessible=true", "-jar", "app.jar", "--spring.config.location=file:/app/etc/application.yaml"]
